# AzureSpace

./: README.md  pyproject.toml
rocket_launch/: RocketLaunchDataCompleted.xlsx  rocket_launch.ipynb
