[tool.poetry]
name = "rocket-launch"
version = "0.1.0"
description = ""
authors = ["FAD95 <feescorciam@protonmail.com>"]
readme = "README.md"
packages = [{include = "rocket_launch"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.0.1"
numpy = "<1.24"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
pydotplus = "^2.0.2"
azureml-sdk = "^1.51.0"
openpyxl = "^3.1.2"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
